<?xml version="1.0"?>
<package>
  <name>common_helpers</name>
  <version>0.0.0</version>
  <description>The common helpers package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>waypoint_updater</build_depend>
  <build_depend>common_utils</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>waypoint_updater</run_depend>
  <run_depend>common_utils</run_depend>
  <export>
  </export>
</package>
